# nucleus

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  agents.toml  nucleus.toml.example
.claude/: secret-strings.example  settings.json
.claude/rules/: secrets.md
.claude/skills/bot-triage/: SKILL.md
.claude/skills/obsidian-tweaks/: SKILL.md
.claude/skills/send-document/: SKILL.md
.claude/skills/session-handoff/: SKILL.md
chat/: Cargo.toml
chat/src/: api.rs  chat_index.html  main.rs
chores/distiller/: Cargo.toml
chores/distiller/src/: main.rs
chores/preference-learner/: Cargo.toml
chores/preference-learner/src/: main.rs
chores/reminders/: Cargo.toml  persona.md
chores/reminders/src/: lib.rs  main.rs  store.rs
chores/skill-gap-learner/: Cargo.toml
chores/skill-gap-learner/src/: main.rs
core/: Cargo.toml
core/examples/: session_repl.rs
core/src/: agent_msg.rs  agents.rs  claude.rs  claude_session.rs  config.rs  db.rs  diary.rs  discord_sdk.rs  health.rs  lib.rs  mem0.rs  memory.rs  migrate.rs  runlog.rs  session_index.rs  session_profile.rs  skills.rs
core/testdata/: rotation_reply_vectors.json  submit_verify_vectors.json
core/tests/: mem0_smoke.rs  session_smoke.rs
dashboard/: Cargo.toml
dashboard/src/: container_detail.html  dashboard_index.html  main.rs
dashboard/src/collectors/: docker.rs  fetcher.rs  hermes.rs  mod.rs  self_check.rs  tunnel.rs
docs/: ADR-001-architecture.md  ADR-002-memory.md  ADR-003-permissions.md  ADR-004-diary-and-distillation.md  ADR-005-second-brain.md  ADR-005a-braindump-review.md  ADR-005b-whatsapp-dm-mode.md  ADR-006-reminders.md  ADR-007-gmail-calendar-via-mcp.md  ADR-008-skills.md  ADR-009-canvas.md  ADR-009-perimeter-tailscale.md  ADR-009-persona-configurability.md  ADR-009-setup-wizard.md  ADR-010-canvas.md  ADR-010-perimeter-tailscale.md  ADR-010-setup-wizard.md  ADR-011-canvas.md  ADR-011-perimeter-tailscale.md  ADR-011-vault-ingestion.md  ADR-012-canvas.md  ADR-012-setup-wizard.md  ADR-012-vault-ingestion.md  ADR-013-vault-ingestion.md  ADR-014-obsidian-vault-customization.md  ADR-015-nucleus-dashboard-unified-operator-app.md  ADR-016-agent-registry-and-log-capture.md  ADR-017-skill-gap-learner.md  ADR-018-whatsapp-media.md  ADR-019-image-generation-surface.md  ADR-020-architecture-hardening.md  ADR-021-agent-session-messaging.md  ADR-022-concurrent-browser-automation.md  ADR-023-session-search.md  ADR-024-reminder-condition-watchers.md  ADR-025-pre-rotation-memory-flush.md  ADR-026-heartbeat.md  ADR-027-adapter-circuit-breaker.md  SECRETS.md
messaging/discord/: Cargo.toml  persona.md
messaging/discord/src/: main.rs
messaging/gmail/: Cargo.toml  persona.md
messaging/gmail/src/: cli.rs  main.rs  metabolize.rs  store.rs
messaging/whatsapp/: .gitignore  package-lock.json  package.json  persona.md  tsconfig.json
messaging/whatsapp/src/: ack.ts  braindump.test.ts  braindump.ts  breaker.test.ts  breaker.ts  caption.ts  check.ts  claude_session.test.ts  claude_session.ts  config.ts  db.test.ts  db.ts  diary.ts  discord_alert.ts  doc_jobs.test.ts  doc_jobs.ts  docs.ts  docstore.test.ts  docstore.ts  docstore_vault.test.ts  docstore_vault.ts  enqueue-media.ts  format.test.ts  format.ts  inbound_media.test.ts  index.ts  jobs.test.ts  jobs.ts  list-groups.ts  model_fallback.test.ts  outbound.test.ts  outbound.ts  persona.test.ts  persona.ts  reset-chat-state.ts  runlog.ts  send.ts  transcribe.ts
news/api/: Cargo.toml
news/api/src/: main.rs  news_index.html
news/fetcher/: Cargo.toml
news/fetcher/src/: main.rs
nucleus-dashboard/: README.md
nucleus-dashboard/api/: Cargo.toml
nucleus-dashboard/api/bindings/: Agent.ts  Bucket.ts  ChannelRow.ts  ChatInfo.ts  ChatRow.ts  CreatedChat.ts  DockerContainer.ts  FireRow.ts  Glances.ts  HealthCheck.ts  NextFireGlance.ts  ReminderView.ts  RunDto.ts  SendReq.ts  SetTitleReq.ts  SourceDto.ts  VaultGlance.ts
nucleus-dashboard/api/src/: canvas_spec.md  main.rs
nucleus-dashboard/api/src/handlers/: agents.rs  chat.rs  cron.rs  dashboard.rs  diary.rs  documents.rs  gallery.rs  mod.rs  news.rs  reminders.rs  sessions.rs  skills.rs  vault.rs
nucleus-dashboard/web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
nucleus-dashboard/web/src/: App.tsx  index.css
nucleus-dashboard/web/src/components/: ErrorBoundary.tsx  FilterDropdown.tsx  PageShell.tsx  SectionHeader.tsx  Select.tsx  StatusPill.tsx  Tabs.tsx  Tile.tsx
nucleus-dashboard/web/src/components/agents/: AgentTile.tsx
nucleus-dashboard/web/src/lib/: api.ts  canvas.test.ts  canvas.ts  hooks.ts
nucleus-dashboard/web/src/pages/: AgentsPage.tsx  ChatPage.tsx  CronPage.tsx  DiaryPage.tsx  DocumentsPage.tsx  GalleryPage.tsx  HomePage.tsx  NewsPage.tsx  RemindersPage.tsx  SessionsPage.tsx  SkillsPage.tsx  VaultPage.tsx
personas/: README.md  alfred.md  assistant.md.example  jarvis.md  jerry.md  robot.md  robot.md.example
tools/: bonsai-serve.sh  check-secrets.sh  healthcheck.sh  hook-write-guard.sh  noobai-serve.sh  stamp-skill-last-used.py
tools/caddy/: Caddyfile.example  README.md  caddy.plist.example  install.sh
tools/cloudflared/: README.md  chat.yaml.example  dashboard.yaml.example  install.sh  news.yaml.example  nucleus.yaml.example
tools/launchd/: README.md  alfred.plist.example  bonsai.plist.example  chat.plist.example  dashboard.plist.example  discord.plist.example  distiller-hourly.plist.example  distiller-weekly.plist.example  distiller.plist.example  gmail-metabolism.plist.example  install.sh  news-api.plist.example  news-fetcher.plist.example  noobai.plist.example  nucleus-dashboard.plist.example  preference-learner.plist.example  reminders-tick.plist.example  skill-gap-learner.plist.example  timesheet-reminder.plist.example  whatsapp.plist.example
tools/mem0/: Dockerfile  docker-compose.yaml
tools/newsyslog/: nucleus.conf.example
tools/noobai/: pyproject.toml  serve.py
tools/playwright-auth/: package-lock.json  package.json  playwright-auth.mjs
(+34 files in other folders)
