[package]
name = "nucleus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10"
async-trait = { workspace = true }
futures = { workspace = true }
figment = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
ts-rs = { workspace = true }
