[package]
name = "dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "dashboard"
path = "src/main.rs"

[dependencies]
nucleus-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
bollard = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
