[package]
name = "reminders"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "reminders"
path = "src/lib.rs"

[[bin]]
name = "reminders"
path = "src/main.rs"

[dependencies]
nucleus-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10"
croner = "3"
clap = { version = "4", features = ["derive"] }
sqlx = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
