[package]
name = "gmail"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "gmail-metabolism"
path = "src/main.rs"

[dependencies]
nucleus-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10"
croner = "3"
clap = { version = "4", features = ["derive"] }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
