[package]
name = "nucleus-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "nucleus-dashboard"
path = "src/main.rs"

[dependencies]
nucleus-core = { workspace = true }
reminders = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace", "cors", "fs"] }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
sqlx = { workspace = true }

tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
