[project]
name = "nucleus-noobai"
version = "0.1.0"
description = "NoobAI-XL (SDXL) image-generation backend for the Nucleus /gallery surface (ADR-019)."
requires-python = ">=3.11"
dependencies = [
    "torch",
    "diffusers",
    "transformers",
    "accelerate",
    "safetensors",
    "fastapi",
    "uvicorn",
    "huggingface-hub",
    "pillow",
]

[tool.uv]
# Deps-only virtual project — serve.py is run directly by uvicorn from this
# dir, so uv shouldn't try to build/install it as a package.
package = false
